{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 901,
  "lineage": "cb0c7319-68fb-70df-dd38-f90626bc7b42",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "g1vpc-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0469696c9942c623e",
            "domain": "vpc",
            "id": "eipalloc-0469696c9942c623e",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-161-211-224.compute-1.amazonaws.com",
            "public_ip": "54.161.211.224",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-031cf125b681ca3e0",
            "arn": "arn:aws:ec2:us-east-1:145504712931:instance/i-04f1d9203d36088e3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04f1d9203d36088e3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b5475c561210673d",
            "private_dns": "ip-10-0-1-115.ec2.internal",
            "private_ip": "10.0.1.115",
            "public_dns": "ec2-44-203-147-135.compute-1.amazonaws.com",
            "public_ip": "44.203.147.135",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a325d2be80442ed1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ce98e0e3a8192cb7",
            "tags": {
              "Name": "g1_instance1"
            },
            "tags_all": {
              "Name": "g1_instance1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-064f3b432a72aed7c",
              "sg-0b19f05ee95c79dfa"
            ]
          },
          "dependencies": [
            "aws_key_pair.mykey",
            "aws_s3_bucket.g1bucket",
            "aws_security_group.validate-g1vpc-http",
            "aws_security_group.validate-g1vpc-ssh",
            "aws_subnet.g1vpc-public-1",
            "aws_vpc.g1vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available",
            "data.template_file.script1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-031cf125b681ca3e0",
            "arn": "arn:aws:ec2:us-east-1:145504712931:instance/i-084e83cafb379e824",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-084e83cafb379e824",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a8cbb89ef7cfc744",
            "private_dns": "ip-10-0-2-63.ec2.internal",
            "private_ip": "10.0.2.63",
            "public_dns": "ec2-34-227-229-21.compute-1.amazonaws.com",
            "public_ip": "34.227.229.21",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-067283c9dfa0541d4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0034f4e314f94eeb4",
            "tags": {
              "Name": "g1_instance2"
            },
            "tags_all": {
              "Name": "g1_instance2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-064f3b432a72aed7c",
              "sg-0b19f05ee95c79dfa"
            ]
          },
          "dependencies": [
            "aws_key_pair.mykey",
            "aws_security_group.validate-g1vpc-http",
            "aws_security_group.validate-g1vpc-ssh",
            "aws_subnet.g1vpc-public-2",
            "aws_vpc.g1vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-031cf125b681ca3e0",
            "arn": "arn:aws:ec2:us-east-1:145504712931:instance/i-0a053c40b9547e29e",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a053c40b9547e29e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0658f974f8c3c3721",
            "private_dns": "ip-10-0-3-69.ec2.internal",
            "private_ip": "10.0.3.69",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-035027e489c61e999",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07799a8c8bda8b0b6",
            "tags": {
              "Name": "g1_instance3"
            },
            "tags_all": {
              "Name": "g1_instance3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": ["sg-0b19f05ee95c79dfa"]
          },
          "dependencies": [
            "aws_key_pair.mykey",
            "aws_security_group.validate-g1vpc-ssh",
            "aws_subnet.g1vpc-private-1",
            "aws_vpc.g1vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available",
            "data.template_file.script3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-031cf125b681ca3e0",
            "arn": "arn:aws:ec2:us-east-1:145504712931:instance/i-04853637456573a4e",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04853637456573a4e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e2385f283282dd0d",
            "private_dns": "ip-10-0-4-190.ec2.internal",
            "private_ip": "10.0.4.190",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01cb89d6b6b12a94c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02628d29b8ca1663a",
            "tags": {
              "Name": "g1_instance4"
            },
            "tags_all": {
              "Name": "g1_instance4"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": ["sg-0b19f05ee95c79dfa"]
          },
          "dependencies": [
            "aws_key_pair.mykey",
            "aws_security_group.validate-g1vpc-ssh",
            "aws_subnet.g1vpc-private-2",
            "aws_vpc.g1vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "g1vpc-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145504712931:internet-gateway/igw-0b0f627ceab1382a1",
            "id": "igw-0b0f627ceab1382a1",
            "owner_id": "145504712931",
            "tags": {
              "Name": "g1vpc-ig"
            },
            "tags_all": {
              "Name": "g1vpc-ig"
            },
            "vpc_id": "vpc-03a64bb1f702452f9"
          },
          "dependencies": ["aws_vpc.g1vpc"]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "g1vpc-nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0469696c9942c623e",
            "connectivity_type": "public",
            "id": "nat-0410efa5991b6eb4e",
            "network_interface_id": "eni-00a000a14ca2d0d2d",
            "private_ip": "10.0.1.111",
            "public_ip": "54.161.211.224",
            "subnet_id": "subnet-0ce98e0e3a8192cb7"
          },
          "dependencies": [
            "aws_eip.g1vpc-nat",
            "aws_internet_gateway.g1vpc-gw",
            "aws_subnet.g1vpc-public-1",
            "aws_vpc.g1vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "g1vpc-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145504712931:route-table/rtb-070d945f27d4539cb",
            "id": "rtb-070d945f27d4539cb",
            "owner_id": "145504712931",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0410efa5991b6eb4e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "g1vpc-private"
            },
            "tags_all": {
              "Name": "g1vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a64bb1f702452f9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.g1vpc-nat",
            "aws_internet_gateway.g1vpc-gw",
            "aws_nat_gateway.g1vpc-nat-gw",
            "aws_subnet.g1vpc-public-1",
            "aws_vpc.g1vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "g1vpc-r",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145504712931:route-table/rtb-0d2623ef0646979ab",
            "id": "rtb-0d2623ef0646979ab",
            "owner_id": "145504712931",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b0f627ceab1382a1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "g1vpc-public-r"
            },
            "tags_all": {
              "Name": "g1vpc-public-r"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a64bb1f702452f9"
          },
          "sensitive_attributes": [],
          "dependencies": ["aws_internet_gateway.g1vpc-gw", "aws_vpc.g1vpc"]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "g1vpc-private-1-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08628e73c980fa3fc",
            "route_table_id": "rtb-070d945f27d4539cb",
            "subnet_id": "subnet-07799a8c8bda8b0b6"
          },
          "dependencies": [
            "aws_eip.g1vpc-nat",
            "aws_internet_gateway.g1vpc-gw",
            "aws_nat_gateway.g1vpc-nat-gw",
            "aws_route_table.g1vpc-private",
            "aws_subnet.g1vpc-private-1",
            "aws_subnet.g1vpc-public-1",
            "aws_vpc.g1vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "g1vpc-private-2-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9723b7f2d2ebce7",
            "route_table_id": "rtb-070d945f27d4539cb",
            "subnet_id": "subnet-02628d29b8ca1663a"
          },
          "dependencies": [
            "aws_eip.g1vpc-nat",
            "aws_internet_gateway.g1vpc-gw",
            "aws_nat_gateway.g1vpc-nat-gw",
            "aws_route_table.g1vpc-private",
            "aws_subnet.g1vpc-private-2",
            "aws_subnet.g1vpc-public-1",
            "aws_vpc.g1vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "g1vpc-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-044db263e7b9007e5",
            "route_table_id": "rtb-0d2623ef0646979ab",
            "subnet_id": "subnet-0ce98e0e3a8192cb7"
          },
          "dependencies": [
            "aws_internet_gateway.g1vpc-gw",
            "aws_route_table.g1vpc-r",
            "aws_subnet.g1vpc-public-1",
            "aws_vpc.g1vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "g1vpc-public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a4e1f2eda8d6478",
            "route_table_id": "rtb-0d2623ef0646979ab",
            "subnet_id": "subnet-0034f4e314f94eeb4"
          },
          "dependencies": [
            "aws_internet_gateway.g1vpc-gw",
            "aws_route_table.g1vpc-r",
            "aws_subnet.g1vpc-public-2",
            "aws_vpc.g1vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "validate-g1database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145504712931:security-group/sg-0ff6b092ee48f4905",
            "description": "Security Group by Group 1 to validate database connection",
            "egress": [
              {
                "cidr_blocks": ["0.0.0.0/0"],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ff6b092ee48f4905",
            "ingress": [
              {
                "cidr_blocks": ["0.0.0.0/0"],
                "description": "MYSQL Access",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "validate-g1database",
            "name_prefix": "",
            "owner_id": "145504712931",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "validate-g1database"
            },
            "tags_all": {
              "Name": "validate-g1database"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a64bb1f702452f9"
          },
          "sensitive_attributes": [],
          "dependencies": ["aws_vpc.g1vpc"]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "validate-g1vpc-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145504712931:security-group/sg-064f3b432a72aed7c",
            "description": "Security Group by Group 1 to validate http connection",
            "egress": [
              {
                "cidr_blocks": ["0.0.0.0/0"],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-064f3b432a72aed7c",
            "ingress": [
              {
                "cidr_blocks": ["0.0.0.0/0"],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": ["0.0.0.0/0"],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "validate-g1vpc-http",
            "name_prefix": "",
            "owner_id": "145504712931",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "validate-g1vpc-http"
            },
            "tags_all": {
              "Name": "validate-g1vpc-http"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a64bb1f702452f9"
          },
          "sensitive_attributes": [],
          "dependencies": ["aws_vpc.g1vpc"]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "validate-g1vpc-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145504712931:security-group/sg-0b19f05ee95c79dfa",
            "description": "Security Group by Group 1 to validate ssh connection",
            "egress": [
              {
                "cidr_blocks": ["0.0.0.0/0"],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b19f05ee95c79dfa",
            "ingress": [
              {
                "cidr_blocks": ["0.0.0.0/0"],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "validate-g1vpc-ssh",
            "name_prefix": "",
            "owner_id": "145504712931",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "validate-g1vpc-ssh"
            },
            "tags_all": {
              "Name": "validate-g1vpc-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a64bb1f702452f9"
          },
          "sensitive_attributes": [],
          "dependencies": ["aws_vpc.g1vpc"]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "g1vpc-private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145504712931:subnet/subnet-07799a8c8bda8b0b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07799a8c8bda8b0b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "145504712931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "g1vpc-private-1"
            },
            "tags_all": {
              "Name": "g1vpc-private-1"
            },
            "vpc_id": "vpc-03a64bb1f702452f9"
          },
          "dependencies": ["aws_vpc.g1vpc"]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "g1vpc-private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145504712931:subnet/subnet-02628d29b8ca1663a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02628d29b8ca1663a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "145504712931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "g1vpc-private-2"
            },
            "tags_all": {
              "Name": "g1vpc-private-2"
            },
            "vpc_id": "vpc-03a64bb1f702452f9"
          },
          "dependencies": ["aws_vpc.g1vpc"]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "g1vpc-private-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145504712931:subnet/subnet-0ee1f5d58743189a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ee1f5d58743189a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "145504712931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "g1vpc-private-3"
            },
            "tags_all": {
              "Name": "g1vpc-private-3"
            },
            "vpc_id": "vpc-03a64bb1f702452f9"
          },
          "dependencies": ["aws_vpc.g1vpc"]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "g1vpc-private-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145504712931:subnet/subnet-084b310394c0d18fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084b310394c0d18fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "145504712931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "g1vpc-private-4"
            },
            "tags_all": {
              "Name": "g1vpc-private-4"
            },
            "vpc_id": "vpc-03a64bb1f702452f9"
          },
          "dependencies": ["aws_vpc.g1vpc"]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "g1vpc-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145504712931:subnet/subnet-0ce98e0e3a8192cb7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce98e0e3a8192cb7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "145504712931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "g1vpc-public-1"
            },
            "tags_all": {
              "Name": "g1vpc-public-1"
            },
            "vpc_id": "vpc-03a64bb1f702452f9"
          },
          "dependencies": ["aws_vpc.g1vpc"]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "g1vpc-public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145504712931:subnet/subnet-0034f4e314f94eeb4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0034f4e314f94eeb4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "145504712931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "g1vpc-public-2"
            },
            "tags_all": {
              "Name": "g1vpc-public-2"
            },
            "vpc_id": "vpc-03a64bb1f702452f9"
          },
          "dependencies": ["aws_vpc.g1vpc"]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "g1vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:145504712931:vpc/vpc-03a64bb1f702452f9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02342cebff4dd96ff",
            "default_route_table_id": "rtb-0568eca3112f0adf7",
            "default_security_group_id": "sg-07a78171160662248",
            "dhcp_options_id": "dopt-0ae30b84b51618cc9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03a64bb1f702452f9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0568eca3112f0adf7",
            "owner_id": "145504712931",
            "tags": {
              "Name": "g1vpc"
            },
            "tags_all": {
              "Name": "g1vpc"
            }
          }
        }
      ]
    }
  ]
}